--- a/css/base.css
+++ b/css/base.css
@@ -1,11 +1,13 @@
+html, body {
+  padding: 0;
+  margin: 0;
+  outline: 0;
+}
+
 body {
   font-family: input-sans, sans-serif;
   font-style: normal;
   font-weight: 100;
-}
-
-.test {
-  height: 5px;
 }
 
 /*# sourceMappingURL=base.css.map */
