Mostly done with all of the front page css

--- a/css/base.css
+++ b/css/base.css
@@ -5,9 +5,160 @@ html, body {
 }
 
 body {
+  background-color: #63B78F;
   font-family: input-sans, sans-serif;
   font-style: normal;
   font-weight: 100;
+}
+
+p, h1, h2, h3, h4, h5 {
+  color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  height: 500px;
+  background-color: #162820;
+  overflow: hidden;
+  position: relative;
+}
+header .hero-img {
+  width: 50%;
+  height: 100%;
+  background: url(../images/hero_bg.jpg) no-repeat;
+  background-size: cover;
+}
+header .hero-banner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  text-align: center;
+  font-weight: 700;
+}
+header .hero-banner h1, header .hero-banner h2 {
+  margin: 10px;
+}
+header .hero-banner h1 {
+  font-size: 2.5em;
+}
+header .hero-banner h2 {
+  font-size: 1.8em;
+}
+header .nav-container {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  transform: translate(-5%, -50%);
+  margin: 0 auto;
+  text-align: center;
+  font-size: 1.3em;
+}
+
+footer {
+  background-color: #162820;
+  height: 100px;
+}
+
+.container {
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
+}
+.container p, .container h1 {
+  color: black;
+}
+
+.column {
+  display: flex;
+  height: 500px;
+  width: 100%;
+}
+.column .img {
+  width: 50%;
+}
+.column .row {
+  width: 32%;
+  padding: 0 50px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 100%;
+  margin: 0 auto;
+}
+.text p {
+  font-size: 1.2em;
+  margin: 10px;
+}
+
+.full {
+  width: 100%;
+  text-align: center;
+}
+.full p, .full h1 {
+  color: white;
+}
+
+#about {
+  background: url(../images/index_bg_01.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#what-we-do {
+  background: url(../images/index_bg_02.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#club {
+  background: url(../images/index_bg_03.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#for-kids {
+  background: url(../images/index_bg_04.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#entrance {
+  background: url(../images/index_bg_05.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#for-teachers {
+  background: url(../images/index_bg_06.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#accessibility {
+  background: url(../images/index_bg_07.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#for-researchers {
+  background: url(../images/index_bg_06.jpg) no-repeat center center;
+  background-size: cover;
 }
 
 /*# sourceMappingURL=base.css.map */
