--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -4,6 +4,109 @@ html, body
   outline: 0
 
 body
+  background-color: $bg
   font-family: input-sans, sans-serif
   font-style: normal
   font-weight: 100
+
+p, h1, h2, h3, h4, h5
+  color: $font
+
+a
+  color: $font
+  text-decoration: none
+  font-weight: 700
+
+ul
+  list-style-type: none
+  margin: 0
+  padding: 0
+
+li
+  margin: 0
+  padding: 0
+
+
+header
+  height: 500px
+  background-color: $primary
+  overflow: hidden
+  position: relative
+
+  .hero-img
+    width: 50%
+    height: 100%
+
+    background: url(../images/hero_bg.jpg) no-repeat
+    background-size: cover
+
+  .hero-banner
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    margin: 0 auto
+    text-align: center
+    font-weight: 700
+
+    h1, h2
+      margin: 10px
+
+    h1
+      font-size: 2.5em
+    h2
+      font-size: 1.8em
+
+  .nav-container
+    position: absolute
+    top: 50%
+    right: 5%
+    transform: translate(-5%, -50%)
+    margin: 0 auto
+    text-align: center
+    font-size: 1.3em
+
+
+footer
+  background-color: $primary
+  height: 100px
+
+.container
+  max-width: 1920px
+  width: 100%
+  margin: 0 auto
+
+  p, h1
+    color: $font-secondary
+
+.column
+  display: flex
+
+  height: 500px
+  width: 100%
+
+  .img
+    width: 50%
+
+  .row
+    width: 32%
+    padding: 0 50px
+
+.text
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  width: 60%
+  height: 100%
+  margin: 0 auto
+
+  p
+    font-size: 1.2em
+    margin: 10px
+
+.full
+  width: 100%
+  text-align: center
+  p, h1
+    color: $font
