--- a/css/base.sass
+++ b/css/base.sass
@@ -2,6 +2,8 @@
 @import "defaults/defaults"
 @import 'pages/index.sass'
 @import 'pages/exhibitions.sass'
+@import 'pages/visit.sass'
+@import 'media_queries.sass'
 
 
 
