--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -1,3 +1,5 @@
+/* Default Section */
+
 html, body
   padding: 0
   margin: 0
@@ -28,9 +30,8 @@ li
 
 
 header
-  height: 200px
+  height: $header-height
   background-color: $bg
-  overflow: hidden
   position: relative
 
   .hero-img
@@ -42,9 +43,9 @@ header
 
   .hero-banner
     position: absolute
-    bottom: 20%
+    top: 50%
     left: 50%
-    transform: translate(-50%, -20%)
+    transform: translate(-50%, -50%)
     margin: 0 auto
     text-align: center
     font-weight: 700
@@ -59,12 +60,13 @@ header
 
   .nav
     position: absolute
-    top: 15%
+    bottom: 0
     right: 50%
-    transform: translate(50%, -15%)
+    transform: translate(50%, 50%)
     margin: 0 auto
     text-align: center
     font-size: 1.3em
+    z-index: 10
 
     line
       stroke: $font
@@ -72,6 +74,8 @@ header
 
     .nav-list
       white-space: nowrap
+      background-color: $bg
+      padding: 5px
 
       li
         display: inline-block
@@ -79,6 +83,8 @@ header
 
         a
           display: block
+          margin: 0
+          padding: 2px 10px
 
       .svg
         display: none
@@ -88,7 +94,7 @@ footer
   font-weight: 700
   font-size: 1.2em
   background-color: $bg
-  height: 100px
+  height: $footer-height
   display: flex
   justify-content: center
   align-items: center
@@ -123,7 +129,6 @@ footer
   justify-content: center
   align-items: center
   width: 60%
-  height: 100%
   margin: 0 auto
 
   p
@@ -138,3 +143,4 @@ footer
   p, h1
     font-size: 1em
     color: $font
+
