--- a/css/media_queries.sass
+++ b/css/media_queries.sass
@@ -74,7 +74,7 @@
     flex-direction: column
     height: auto
     position: relative
-    background-color: rgba(22, 40, 32, 0.95)
+    background-color: rgba(10, 33, 53, 0.95)
 
     h1
       color: $font
@@ -112,6 +112,21 @@
         p
           margin: 20px
 
+  .contact
+    .column
+      padding: 50px 0
+      flex-direction: column
+
+      .row
+        margin: 50px 0
+        min-height: 510px
+        border: none
+        width: 80%
+        padding: 0
+
+        p
+          margin: 16px 0
+
 
 @media screen and (max-width: 520px)
 
@@ -128,6 +143,38 @@
         white-space: normal !important
         margin-bottom: 30px
 
+  .contact
+    .column
+      .row
+        width: 95%
+
 @media screen and (max-width: 380px)
 
   .column
+    .row
+      p
+        margin: 10px 5px
+
+
+/* Visit Media Queries Section */
+@media screen and (max-width: 1920px)
+
+  .contact .row
+    padding: 0 100px
+
+@media screen and (max-width: 1554px)
+
+  .contact .row
+    padding: 0 60px
+
+@media screen and (max-width: 1400px)
+
+  .contact .row
+    padding: 0 30px
+
+@media screen and (max-width: 1284px)
+
+  .contact
+    .row
+      padding-top: 40px
+      min-height: 650px
