--- a/css/pages/visit.sass
+++ b/css/pages/visit.sass
@@ -16,7 +16,8 @@
       text-align: right
 
   .column
-    height: calc(100vh -  #{$footer-height} - #{$header-height})
+    height: auto
+    min-height: calc(100vh -  #{$footer-height} - #{$header-height})
     flex-direction: row
     justify-content: space-around
     align-items: center
