--- a/css/media_queries.sass
+++ b/css/media_queries.sass
@@ -162,15 +162,24 @@
   .contact .row
     padding: 0 100px
 
+  .involvement .row
+    padding: 50px 0
+
 @media screen and (max-width: 1554px)
 
   .contact .row
     padding: 0 60px
 
+  .involvement .row
+    padding: 50px 0
+
 @media screen and (max-width: 1400px)
 
   .contact .row
     padding: 0 30px
+
+  .involvement .row
+    padding: 50px 0
 
 @media screen and (max-width: 1284px)
 
@@ -178,3 +187,6 @@
     .row
       padding-top: 40px
       min-height: 650px
+
+  .involvement .row
+    padding: 50px 0
