--- a/css/pages/visit.sass
+++ b/css/pages/visit.sass
@@ -6,7 +6,7 @@
   background: url(../images/visit_bg_01.jpg) no-repeat center center
   background-size: cover
 
-  p
+  p ,h2
     color: $font
 
   table
