--- a/css/base.sass
+++ b/css/base.sass
@@ -3,6 +3,7 @@
 @import 'pages/index.sass'
 @import 'pages/exhibitions.sass'
 @import 'pages/visit.sass'
+@import 'pages/involvement.sass'
 @import 'media_queries.sass'
 
 
