--- a/css/base.sass
+++ b/css/base.sass
@@ -4,6 +4,7 @@
 @import 'pages/exhibitions.sass'
 @import 'pages/visit.sass'
 @import 'pages/involvement.sass'
+@import 'pages/contact.sass'
 @import 'media_queries.sass'
 
 
