--- a/css/pages/involvement.sass
+++ b/css/pages/involvement.sass
@@ -1,6 +1,8 @@
 /* Involvement Section */
 
 .involvement
+  background: url(../images/involvement_bg_01.jpg) no-repeat center center
+
   .row
-    padding: 0 30px
+    padding: 50px 30px
     border: none
