--- a/css/pages/visit.sass
+++ b/css/pages/visit.sass
@@ -2,7 +2,7 @@
 
 .contact
   color: $font
-  min-height: calc(100vh -  #{$footer-height} - #{$header-height})
+  min-height: calc(100vh -  #{$footer-height} - #{$header-height} - 4px)
   background: url(../images/visit_bg_01.jpg) no-repeat center center
   background-size: cover
 
@@ -17,7 +17,7 @@
 
   .column
     height: auto
-    min-height: calc(100vh -  #{$footer-height} - #{$header-height})
+    min-height: calc(100vh -  #{$footer-height} - #{$header-height} - 4px)
     flex-direction: row
     justify-content: space-around
     align-items: center
