--- a/css/pages/contact.sass
+++ b/css/pages/contact.sass
@@ -8,6 +8,56 @@
     stroke: $font
     stroke-width: 10px
 
+  #address_map
+    position: relative
+
+    #map
+      width: 100%
+      min-height: 600px
+
+    #address
+      z-index: 9
+      width: 350px
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+
+      #address-text
+        z-index: 10
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 83%
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        padding: 20px 0
+
+        p
+          margin: 2px
+
+        .address-text
+          margin: 10px auto
+
+        a
+          font-weight: 100
+          font-size: 12px
+          color: $font-secondary
+          background-color: $font
+          margin: 10px auto
+          height: 32px
+          line-height: 32px
+          width: 80%
+          border-radius: 5px
+
+      #map_bg
+        width: 100%
+
+
+
   .contact-column
     min-height: 600px
     width: 100%
