--- a/css/pages/contact.sass
+++ b/css/pages/contact.sass
@@ -53,6 +53,10 @@
           width: 80%
           border-radius: 5px
 
+          &:hover
+            color: $font
+            background-color: $primary
+
       #map_bg
         width: 100%
 
@@ -81,8 +85,24 @@
       min-width: 500px
 
       .contact-bg
-        color: $font-secondary
-        background-color: $font
+        color: $font
+        background-color: $bg
         font-size: 14px
         line-height: 40px
         font-weight: 700
+
+  #address-button
+    width: 160px
+    height: 30px
+    z-index: 10
+    position: absolute
+    top: 5%
+    left: 50%
+    transform: translate(-50%, -50%)
+    background-color: $bg
+
+    p
+      line-height: 30px
+      margin: 0
+      padding: 0
+      font-size: 16px
