--- a/css/base.css
+++ b/css/base.css
@@ -21,6 +21,9 @@ a {
   text-decoration: none;
   font-weight: 700;
 }
+a:hover {
+  color: #0a2135;
+}
 
 ul {
   list-style-type: none;
@@ -35,9 +38,9 @@ li {
 
 header {
   height: 200px;
-  background-color: #0a2135;
+  background-color: #0088FF;
   position: relative;
-  border-bottom: 2px solid #0a2135;
+  border-bottom: 2px solid #0088FF;
 }
 header .hero-img {
   width: 50%;
@@ -65,7 +68,7 @@ header .hero-banner h2 {
 }
 header .nav {
   position: absolute;
-  bottom: 0;
+  bottom: 15%;
   right: 50%;
   transform: translate(50%, 50%);
   margin: 0 auto;
@@ -79,7 +82,6 @@ header .nav line {
 }
 header .nav .nav-list {
   white-space: nowrap;
-  background-color: #0a2135;
   padding: 5px;
 }
 header .nav .nav-list li {
@@ -98,12 +100,12 @@ header .nav .nav-list .svg {
 footer {
   font-weight: 700;
   font-size: 1.2em;
-  background-color: #0a2135;
+  background-color: #0088FF;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: 2px solid #0a2135;
+  border-top: 2px solid #0088FF;
 }
 footer a {
   margin: 0 20px;
@@ -338,6 +340,10 @@ footer a {
   width: 80%;
   border-radius: 5px;
 }
+#contact #address_map #address #address-text a:hover {
+  color: white;
+  background-color: #0a2135;
+}
 #contact #address_map #address #map_bg {
   width: 100%;
 }
@@ -364,11 +370,27 @@ footer a {
   min-width: 500px;
 }
 #contact .contact-column .contact-info .contact-bg {
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: #0088FF;
   font-size: 14px;
   line-height: 40px;
   font-weight: 700;
+}
+#contact #address-button {
+  width: 160px;
+  height: 30px;
+  z-index: 10;
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #0088FF;
+}
+#contact #address-button p {
+  line-height: 30px;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
 }
 
 /* Media Queries Section */
