added a dash of colour and fixed some guideline issues

--- a/css/media_queries.sass
+++ b/css/media_queries.sass
@@ -74,7 +74,7 @@
     flex-direction: column
     height: auto
     position: relative
-    background-color: rgba(10, 33, 53, 0.95)
+    background-color: $secondary-opacity
 
     h2
       color: $font
