--- a/css/pages/contact.sass
+++ b/css/pages/contact.sass
@@ -5,7 +5,7 @@
   background: url(../images/contact_bg_01.jpg) no-repeat center center
 
   svg
-    stroke: $font
+    stroke: $secondary
     stroke-width: 10px
 
   #address_map
@@ -86,7 +86,7 @@
 
       .contact-bg
         color: $font
-        background-color: $bg
+        background-color: $secondary
         font-size: 14px
         line-height: 40px
         font-weight: 700
@@ -99,7 +99,7 @@
     top: 5%
     left: 50%
     transform: translate(-50%, -50%)
-    background-color: $bg
+    background-color: $secondary
 
     p
       line-height: 30px
