--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,7 @@ a {
   font-weight: 700;
 }
 a:hover {
-  color: #0a2135;
+  color: #B41912;
 }
 
 ul {
@@ -40,7 +40,6 @@ header {
   height: 200px;
   background-color: #0059a7;
   position: relative;
-  border-bottom: 2px solid #0059a7;
 }
 header .hero-img {
   width: 50%;
@@ -77,7 +76,7 @@ header .nav {
   z-index: 10;
 }
 header .nav line {
-  stroke: white;
+  stroke: #B41912;
   stroke-width: 5px;
 }
 header .nav .nav-list {
@@ -105,7 +104,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: 2px solid #0059a7;
 }
 footer a {
   margin: 0 20px;
@@ -140,6 +138,9 @@ footer a {
   align-items: center;
   width: 60%;
   margin: 0 auto;
+}
+.text h2 {
+  color: #B41912;
 }
 .text p {
   font-size: 14px;
@@ -199,6 +200,9 @@ footer a {
 }
 
 /* Exhibition Section */
+.exhibition h2 {
+  color: white;
+}
 .exhibition .column {
   height: 600px;
 }
@@ -235,7 +239,7 @@ footer a {
 /* Visit Section */
 .contact {
   color: white;
-  min-height: calc(100vh - 80px - 200px - 4px);
+  min-height: calc(100vh - 80px - 200px);
   background: url(../images/visit_bg_01.jpg) no-repeat center center;
   background-size: cover;
 }
@@ -250,7 +254,7 @@ footer a {
 }
 .contact .column {
   height: auto;
-  min-height: calc(100vh - 80px - 200px - 4px);
+  min-height: calc(100vh - 80px - 200px);
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
@@ -261,20 +265,22 @@ footer a {
   padding: 0 180px;
 }
 .contact .visit {
-  border-right: 2px solid white;
+  border-right: 2px solid #B41912;
 }
 .contact .admission {
-  border-left: 2px solid white;
+  border-left: 2px solid #B41912;
 }
 
-.info h1 {
+.info .info-title {
+  font-size: 1.17em;
   color: white;
   text-align: center;
+  background-color: transparent;
 }
 .info h2 {
   font-size: 1em;
   text-align: center;
-  background-color: #0059a7;
+  background-color: #B41912;
   padding: 5px 0;
 }
 
@@ -293,7 +299,7 @@ footer a {
   background: url(../images/contact_bg_01.jpg) no-repeat center center;
 }
 #contact svg {
-  stroke: white;
+  stroke: #B41912;
   stroke-width: 10px;
 }
 #contact #address_map {
@@ -372,7 +378,7 @@ footer a {
 }
 #contact .contact-column .contact-info .contact-bg {
   color: white;
-  background-color: #0059a7;
+  background-color: #B41912;
   font-size: 14px;
   line-height: 40px;
   font-weight: 700;
@@ -385,7 +391,7 @@ footer a {
   top: 5%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #0059a7;
+  background-color: #B41912;
 }
 #contact #address-button p {
   line-height: 30px;
@@ -467,7 +473,7 @@ footer a {
     flex-direction: column;
     height: auto;
     position: relative;
-    background-color: rgba(10, 33, 53, 0.95);
+    background-color: rgba(180, 25, 18, 0.89);
   }
   .column:nth-child(even) h2 {
     color: white;
