--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -20,7 +20,7 @@ a
   font-weight: 700
 
   &:hover
-    color: $primary
+    color: $secondary
 
 ul
   list-style-type: none
@@ -36,7 +36,7 @@ header
   height: $header-height
   background-color: $bg
   position: relative
-  border-bottom: 2px solid $bg
+  //border-bottom: 2px solid $secondary
 
   .hero-img
     width: 50%
@@ -72,7 +72,7 @@ header
     z-index: 10
 
     line
-      stroke: $font
+      stroke: $secondary
       stroke-width: 5px
 
     .nav-list
@@ -100,7 +100,7 @@ footer
   display: flex
   justify-content: center
   align-items: center
-  border-top: 2px solid $bg
+  //border-top: 2px solid $secondary
 
   a
     margin: 0 20px
@@ -133,6 +133,9 @@ footer
   align-items: center
   width: 60%
   margin: 0 auto
+
+  h2
+    color: $secondary
 
   p
     font-size: 14px
