--- a/css/defaults/variables.sass
+++ b/css/defaults/variables.sass
@@ -1,4 +1,6 @@
 $primary: #0a2135
+$secondary: #B41912
+$secondary-opacity: rgba(180, 25, 18, 0.89)
 $bg: #0059a7
 $font: white
 $font-secondary: black
