--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -6,7 +6,7 @@ html, body
   outline: 0
 
 body
-  background-color: $primary
+  background-color: $bg
   font-family: input-sans, sans-serif
   font-style: normal
   font-weight: 100
@@ -72,7 +72,7 @@ header
     z-index: 10
 
     line
-      stroke: $secondary
+      stroke: $font
       stroke-width: 5px
 
     .nav-list
@@ -106,7 +106,7 @@ footer
     margin: 0 20px
 
 .container
-  max-width: 1920px
+  //max-width: 1920px
   width: 100%
   margin: 0 auto
 
