redid the exhibitions pictures as they were not going to be full screen

--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -6,7 +6,7 @@ html, body
   outline: 0
 
 body
-  background-color: $bg
+  background-color: black
   font-family: input-sans, sans-serif
   font-style: normal
   font-weight: 100
