--- a/css/pages/contact.sass
+++ b/css/pages/contact.sass
@@ -3,6 +3,7 @@
   min-height: auto
   height: auto
   background: url(../images/contact_bg_01.jpg) no-repeat center center
+  background-size: cover
 
   svg
     stroke: $secondary
