--- a/css/pages/involvement.sass
+++ b/css/pages/involvement.sass
@@ -2,6 +2,7 @@
 
 .involvement
   background: url(../images/involvement_bg_01.jpg) no-repeat center center
+  background-size: cover
 
   .row
     padding: 50px 30px
