--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  background-color: #0059a7;
+  background-color: black;
   font-family: input-sans, sans-serif;
   font-style: normal;
   font-weight: 100;
@@ -286,6 +286,7 @@ footer a {
 /* Involvement Section */
 .involvement {
   background: url(../images/involvement_bg_01.jpg) no-repeat center center;
+  background-size: cover;
 }
 .involvement .row {
   padding: 50px 30px;
@@ -296,6 +297,7 @@ footer a {
   min-height: auto;
   height: auto;
   background: url(../images/contact_bg_01.jpg) no-repeat center center;
+  background-size: cover;
 }
 #contact svg {
   stroke: #B41912;
