--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -38,6 +38,12 @@ header
   position: relative
   //border-bottom: 2px solid $secondary
 
+  .icon
+    position: absolute
+    top: 8%
+    left: 5%
+    width: 100px
+
   .hero-img
     width: 50%
     height: 100%
@@ -46,9 +52,9 @@ header
 
   .hero-banner
     position: absolute
-    top: 50%
+    top: 60%
     left: 50%
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -60%)
     margin: 0 auto
     text-align: center
     font-weight: 700
@@ -63,9 +69,9 @@ header
 
   .nav
     position: absolute
-    bottom: 15%
+    top: 10%
     right: 50%
-    transform: translate(50%, 50%)
+    transform: translate(50%, 10%)
     margin: 0 auto
     text-align: center
     font-size: 1.3em
