--- a/css/media_queries.sass
+++ b/css/media_queries.sass
@@ -35,12 +35,15 @@
   header
     height: 350px
 
+    .icon
+      width: 50px
+
     .hero-banner
       top: 25% !important
 
     .nav
       width: 200px
-      bottom: 34%
+      top: 34%
 
       .nav-list
         white-space: normal
@@ -134,7 +137,7 @@
     height: 500px
 
     .nav
-      bottom: 30%
+      top: 48%
 
     .hero-banner
       top: 25% !important
@@ -143,7 +146,19 @@
         white-space: normal !important
         margin-bottom: 30px
 
+  #contact
+    #address_map #address
+      width: 75%
+
+    .contact-column .contact-info
+      min-width: auto
+      width: 90%
+
+    svg
+      width: 90%
+
   .contact
+
     .column
       .row
         width: 95%
