--- a/css/pages/contact.sass
+++ b/css/pages/contact.sass
@@ -86,11 +86,16 @@
       min-width: 500px
 
       .contact-bg
+        display: block
         color: $font
         background-color: $secondary
         font-size: 14px
         line-height: 40px
         font-weight: 700
+        overflow: hidden
+
+        &:hover
+          background-color: $primary
 
   #address-button
     width: 160px
