--- a/css/defaults/variables.sass
+++ b/css/defaults/variables.sass
@@ -1,8 +1,11 @@
 $primary: #0a2135
 $secondary: #B41912
 $secondary-opacity: rgba(180, 25, 18, 0.89)
-$bg: #0059a7
+$bg: #323232
+$font-family: acumin-pro, sans-serif
 $font: white
 $font-secondary: black
 $header-height: 200px
-$footer-height: 80px
+$footer-height: 400px
+$footer-color: gray
+$text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6)
