--- a/css/pages/contact.sass
+++ b/css/pages/contact.sass
@@ -5,6 +5,9 @@
   background: url(../images/contact_bg_01.jpg) no-repeat center center
   background-size: cover
 
+  p, h2
+    color: $font
+
   svg
     stroke: $secondary
     stroke-width: 10px
