--- a/css/pages/involvement.sass
+++ b/css/pages/involvement.sass
@@ -1,9 +1,19 @@
 /* Involvement Section */
 
-.involvement
-  background: url(../images/involvement_bg_01.jpg) no-repeat center center
+.info-pages
+  .main
+    height: auto
+    flex-direction: column
+
+#support
+  background: url(../images/exhibition_bg_01.jpg) no-repeat center center
   background-size: cover
 
-  .row
-    padding: 50px 30px
-    border: none
+#volunteer
+  background: url(../images/exhibition_bg_04.jpg) no-repeat center center
+  background-size: cover
+
+#internships
+  background: url(../images/exhibition_bg_05.jpg) no-repeat center center
+  background-size: cover
+
