--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  background-color: black;
+  background-color: #323232;
   font-family: input-sans, sans-serif;
   font-style: normal;
   font-weight: 100;
@@ -14,6 +14,11 @@ body {
 
 p, h1, h2, h3, h4, h5 {
   color: white;
+}
+
+p {
+  font-family: acumin-pro, sans-serif;
+  font-weight: 300;
 }
 
 a {
@@ -36,21 +41,22 @@ li {
   padding: 0;
 }
 
-header {
-  height: 200px;
-  background-color: #0059a7;
-  position: relative;
-}
-header .icon {
+.icon {
   position: absolute;
   top: 8%;
   left: 5%;
   width: 50px;
 }
+
+header {
+  height: 200px;
+  background-color: #323232;
+  position: relative;
+}
 header .hero-img {
-  width: 50%;
+  width: 100%;
   height: 100%;
-  background: url(../images/hero_bg.jpg) no-repeat;
+  background: url(../images/hero_bg.jpg) no-repeat 50% 10%;
   background-size: cover;
 }
 header .hero-banner {
@@ -63,6 +69,7 @@ header .hero-banner {
   font-weight: 700;
 }
 header .hero-banner h1, header .hero-banner h2 {
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
   margin: 0;
 }
 header .hero-banner h1 {
@@ -73,7 +80,7 @@ header .hero-banner h2 {
 }
 header .nav {
   position: absolute;
-  top: 10%;
+  top: 20px;
   right: 50%;
   transform: translate(50%, 10%);
   margin: 0 auto;
@@ -94,25 +101,49 @@ header .nav .nav-list li {
   margin: 0 20px;
 }
 header .nav .nav-list li a {
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
   display: block;
   margin: 0;
   padding: 2px 10px;
 }
-header .nav .nav-list .svg {
-  display: none;
-}
 
 footer {
+  position: relative;
   font-weight: 700;
   font-size: 1.2em;
-  background-color: #0059a7;
-  height: 80px;
+  background-color: #323232;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer a {
-  margin: 0 20px;
+footer .icon {
+  width: 100px;
+  top: 25%;
+}
+footer .link-container {
+  margin: 80px 40px 0 40px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+footer .link-container a {
+  font-family: acumin-pro, sans-serif;
+  font-weight: 300;
+  font-size: 0.9em;
+}
+footer .link-container .nav-link {
+  color: gray;
+  margin: 3px 0;
+}
+footer .link-container .nav-link:first-child {
+  color: white;
+  font-weight: 700;
+}
+footer .link-container .nav-link:hover {
+  color: #B41912;
 }
 
 .container {
@@ -131,10 +162,6 @@ footer a {
 .column .img {
   width: 50%;
 }
-.column .row {
-  width: 32%;
-  padding: 0 50px;
-}
 
 .text {
   display: flex;
@@ -145,6 +172,7 @@ footer a {
   margin: 0 auto;
 }
 .text h2 {
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
   color: #B41912;
 }
 .text p {
@@ -154,19 +182,74 @@ footer a {
 }
 
 .text-blob {
+  background-color: white;
   width: 100%;
   text-align: center;
   cursor: pointer;
 }
 .text-blob p, .text-blob h1 {
-  font-size: 1em;
+  font-size: 1.1em;
+  color: black;
+}
+
+.active {
+  color: #B41912;
+}
+
+.shadow-up {
+  box-shadow: 0 -10px 20px 2px rgba(0, 0, 0, 0.4);
+}
+
+.shadow-down {
+  box-shadow: 0 10px 20px 2px rgba(0, 0, 0, 0.4);
+}
+
+.shadow-inset {
+  box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.4);
+}
+
+.card-container {
+  width: 80%;
+  margin: 0 auto;
+  height: 600px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.card-container .card {
+  box-shadow: 0 15px 5px -10px rgba(0, 0, 0, 0.5);
+  margin: 20px;
+  width: calc( 100% / 3 );
+  height: 450px;
+}
+.card-container .card .card-text {
+  width: 80%;
+  margin: 0 auto;
+  height: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.card-container .card p {
+  margin: 10px 0;
   color: white;
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
+}
+.card-container .card h2 {
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
+  color: white;
+  text-align: center;
+  margin: 0;
+  line-height: 50px;
+  background-color: rgba(180, 25, 18, 0.89);
+  box-shadow: 0 10px 20px 2px rgba(0, 0, 0, 0.4);
 }
 
 /* Index Section */
-#about {
-  background: url(../images/index_bg_01.jpg) no-repeat center center;
-  background-size: cover;
+.index .description {
+  width: 32%;
 }
 
 #what-we-do {
@@ -175,17 +258,15 @@ footer a {
 }
 
 #club {
-  background: url(../images/index_bg_03.jpg) no-repeat center center;
+  background: url(../images/index_bg_01.jpg) no-repeat center center;
   background-size: cover;
+}
+#club .text p {
+  color: white;
 }
 
 #for-kids {
   background: url(../images/index_bg_04.jpg) no-repeat center center;
-  background-size: cover;
-}
-
-#entrance {
-  background: url(../images/index_bg_05.jpg) no-repeat center center;
   background-size: cover;
 }
 
@@ -198,6 +279,9 @@ footer a {
   background: url(../images/index_bg_07.jpg) no-repeat center center;
   background-size: cover;
 }
+#accessibility .text p {
+  color: white;
+}
 
 #for-researchers {
   background: url(../images/index_bg_06.jpg) no-repeat center center;
@@ -207,18 +291,24 @@ footer a {
 /* Exhibition Section */
 .exhibition h2 {
   color: white;
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
 }
-.exhibition .column {
+.exhibition .space {
   height: 600px;
+}
+.exhibition .space .text-blob p, .exhibition .space .text p {
+  color: white;
+}
+.exhibition .space p {
+  width: 80%;
+  margin: 20px auto;
+  text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.6);
 }
 .exhibition .space-title {
   font-size: 1.8em;
 }
 .exhibition .half {
   width: 50%;
-}
-.exhibition .half p {
-  margin: 20px 120px;
 }
 .exhibition #cosmology {
   background: url(../images/exhibition_bg_01.jpg) no-repeat center center;
@@ -242,61 +332,25 @@ footer a {
 }
 
 /* Visit Section */
-.contact {
-  color: white;
-  min-height: calc(100vh - 80px - 200px);
-  background: url(../images/visit_bg_01.jpg) no-repeat center center;
-  background-size: cover;
-}
-.contact p, .contact h2 {
-  color: white;
-}
-.contact table {
-  width: 100%;
-}
-.contact table tr td:last-child {
-  text-align: right;
-}
-.contact .column {
-  height: auto;
-  min-height: calc(100vh - 80px - 200px);
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-.contact .row {
-  width: 50%;
-  min-height: 520px;
-  padding: 0 180px;
-}
-.contact .visit {
-  border-right: 2px solid #B41912;
-}
-.contact .admission {
-  border-left: 2px solid #B41912;
-}
-
-.info .info-title {
-  font-size: 1.17em;
-  color: white;
-  text-align: center;
-  background-color: transparent;
-}
-.info h2 {
-  font-size: 1em;
-  text-align: center;
-  background-color: #B41912;
-  padding: 5px 0;
-}
-
 /* Involvement Section */
-.involvement {
-  background: url(../images/involvement_bg_01.jpg) no-repeat center center;
+.info-pages .main {
+  height: auto;
+  flex-direction: column;
+}
+
+#support {
+  background: url(../images/exhibition_bg_01.jpg) no-repeat center center;
   background-size: cover;
 }
-.involvement .row {
-  padding: 50px 30px;
-  border: none;
+
+#volunteer {
+  background: url(../images/exhibition_bg_04.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+#internships {
+  background: url(../images/exhibition_bg_05.jpg) no-repeat center center;
+  background-size: cover;
 }
 
 #contact {
@@ -304,6 +358,9 @@ footer a {
   height: auto;
   background: url(../images/contact_bg_01.jpg) no-repeat center center;
   background-size: cover;
+}
+#contact p, #contact h2 {
+  color: white;
 }
 #contact svg {
   stroke: #B41912;
@@ -460,7 +517,7 @@ footer a {
   }
   header .nav .nav-list a {
     margin: 0;
-    background-color: #0059a7;
+    background-color: #323232;
   }
   header .nav .nav-list li {
     width: 100%;
