--- a/css/defaults/defaults.sass
+++ b/css/defaults/defaults.sass
@@ -6,13 +6,17 @@ html, body
   outline: 0
 
 body
-  background-color: black
+  background-color: $bg
   font-family: input-sans, sans-serif
   font-style: normal
   font-weight: 100
 
 p, h1, h2, h3, h4, h5
   color: $font
+
+p
+  font-family: $font-family
+  font-weight: 300
 
 a
   color: $font
@@ -32,22 +36,24 @@ li
   padding: 0
 
 
+.icon
+  position: absolute
+  top: 8%
+  left: 5%
+  width: 50px
+
 header
   height: $header-height
   background-color: $bg
   position: relative
   //border-bottom: 2px solid $secondary
 
-  .icon
-    position: absolute
-    top: 8%
-    left: 5%
-    width: 50px
+
 
   .hero-img
-    width: 50%
+    width: 100%
     height: 100%
-    background: url(../images/hero_bg.jpg) no-repeat
+    background: url(../images/hero_bg.jpg) no-repeat 50% 10%
     background-size: cover
 
   .hero-banner
@@ -60,6 +66,7 @@ header
     font-weight: 700
 
     h1, h2
+      text-shadow: $text-shadow
       margin: 0
 
     h1
@@ -69,7 +76,7 @@ header
 
   .nav
     position: absolute
-    top: 10%
+    top: 20px
     right: 50%
     transform: translate(50%, 10%)
     margin: 0 auto
@@ -90,15 +97,13 @@ header
         margin: 0 20px
 
         a
+          text-shadow: $text-shadow
           display: block
           margin: 0
           padding: 2px 10px
 
-      .svg
-        display: none
-
-
 footer
+  position: relative
   font-weight: 700
   font-size: 1.2em
   background-color: $bg
@@ -106,10 +111,35 @@ footer
   display: flex
   justify-content: center
   align-items: center
-  //border-top: 2px solid $secondary
 
-  a
-    margin: 0 20px
+  .icon
+    width: 100px
+    top: 25%
+
+  .link-container
+    margin: 80px 40px 0 40px
+    height: 80%
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    align-items: flex-start
+
+    a
+      font-family: $font-family
+      font-weight: 300
+      font-size: 0.9em
+
+    .nav-link
+      color: $footer-color
+      margin: 3px 0
+
+      &:first-child
+        color: $font
+        font-weight: 700
+
+      &:hover
+        color: $secondary
+
 
 .container
   //max-width: 1920px
@@ -128,10 +158,6 @@ footer
   .img
     width: 50%
 
-  .row
-    width: 32%
-    padding: 0 50px
-
 .text
   display: flex
   flex-direction: column
@@ -141,6 +167,7 @@ footer
   margin: 0 auto
 
   h2
+    text-shadow: $text-shadow
     color: $secondary
 
   p
@@ -149,11 +176,62 @@ footer
     margin: 10px
 
 .text-blob
+  background-color: $font
   width: 100%
   text-align: center
   cursor: pointer
 
   p, h1
-    font-size: 1em
-    color: $font
+    font-size: 1.1em
+    color: $font-secondary
+
+.active
+  color: $secondary
+
+.shadow-up
+  box-shadow: 0 -10px 20px 2px rgba(0, 0, 0, 0.4)
+
+.shadow-down
+  box-shadow: 0 10px 20px 2px rgba(0, 0, 0, 0.4)
+
+.shadow-inset
+  box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.4)
+
+.card-container
+  width: 80%
+  margin: 0 auto
+  height: 600px
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+
+  .card
+    box-shadow: 0 15px 5px -10px rgba(0, 0, 0, 0.5)
+    margin: 20px
+    width: calc( 100% / 3 )
+    height: 450px
+
+    .card-text
+      width: 80%
+      margin: 0 auto
+      height: calc(100% - 50px)
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+
+    p
+      margin: 10px 0
+      color: $font
+      text-shadow: $text-shadow
+
+    h2
+      text-shadow: $text-shadow
+      color: white
+      text-align: center
+      margin: 0
+      line-height: 50px
+      background-color: $secondary-opacity
+      box-shadow: 0 10px 20px 2px rgba(0, 0, 0, 0.4)
 
