--- a/css/pages/exhibitions.sass
+++ b/css/pages/exhibitions.sass
@@ -4,9 +4,18 @@
 
   h2
     color: $font
+    text-shadow: $text-shadow
 
-  .column
+  .space
     height: 600px
+
+    .text-blob p, .text p
+      color: $font
+
+    p
+      width: 80%
+      margin: 20px auto
+      text-shadow: $text-shadow
 
   .space-title
     font-size: 1.8em
@@ -14,8 +23,7 @@
   .half
     width: 50%
 
-    p
-      margin: 20px 120px
+
 
   #cosmology
     background: url(../images/exhibition_bg_01.jpg) no-repeat center center
