--- a/css/pages/index.sass
+++ b/css/pages/index.sass
@@ -1,24 +1,34 @@
 /* Index Section */
 
-#about
-  background: url(../images/index_bg_01.jpg) no-repeat center center
-  background-size: cover
+.index
+  //.text-blob p
+  //  color: $font
+
+  .description
+    width: 32%
+
+//#about
+//  background: url(../images/index_bg_01.jpg) no-repeat center center
+//  background-size: cover
 
 #what-we-do
   background: url(../images/index_bg_02.jpg) no-repeat center center
   background-size: cover
 
 #club
-  background: url(../images/index_bg_03.jpg) no-repeat center center
+  background: url(../images/index_bg_01.jpg) no-repeat center center
   background-size: cover
+
+  .text p
+    color: $font
 
 #for-kids
   background: url(../images/index_bg_04.jpg) no-repeat center center
   background-size: cover
 
-#entrance
-  background: url(../images/index_bg_05.jpg) no-repeat center center
-  background-size: cover
+//#entrance
+//  background: url(../images/index_bg_05.jpg) no-repeat center center
+//  background-size: cover
 
 #for-teachers
   background: url(../images/index_bg_06.jpg) no-repeat center center
@@ -27,6 +37,9 @@
 #accessibility
   background: url(../images/index_bg_07.jpg) no-repeat center center
   background-size: cover
+
+  .text p
+    color: $font
 
 #for-researchers
   background: url(../images/index_bg_06.jpg) no-repeat center center
